mycourse page fixes- resolved the alignment & no course display style

--- a/src/app/home/my-courses/my-courses.component.scss
+++ b/src/app/home/my-courses/my-courses.component.scss
@@ -9,7 +9,7 @@
 @media only screen and (max-width: 768px) {
     .lc-card-item {
         font-size: 20px;
-        
+
         height: auto;
         margin-right: 10px;
         cursor: pointer;
@@ -24,7 +24,7 @@
 @media only screen and (min-width: 769px) {
 .lc-card-item {
     font-size: 20px;
-    
+
     height: auto;
     margin-right: 10px;
     cursor: pointer;
@@ -113,6 +113,7 @@
 
 .searchTerm {
   margin-left: 0.5em;
+  margin-top: 0.5em;
   border: 1px solid #aaa;
   height: 30px;
   border-radius: 5px;
